changed footer added a script for current year

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
 			</div>
 			<!-- End / Content-->
 			<footer class="main-footer">
-    Copyright &copy; 2014-2021 <a href="#">signrOots</a>.
-    All rights reserved.
+    Powered by<a href="https://signroots.com" target="_blank"> signrOots &copy; <script>document.write(new Date().getFullYear())</script></a>
     
   </footer>
 		</div>
