--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<div class="hero__wrapper">
 							<div class="row">
 								<div class="col-lg-10 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
-									<div class="hero__title_inner"><img src="media\gemlogo1.png" width="400px" height="200px">
+									<div class="hero__title_inner"><img src="media\logo.png" width="400px" height="200px">
 										<h5 style="color: white;">QUALITY YOU CAN TRUST</h5>
 										<h1 class="hero__title">We Are Almost Ready for Launch</h1>
 										<p class="hero__text"><strong>GEMPLAST</strong><br>Pusat Perniagaan Bentong maju <br> Benton, Pahang. Malaysia 092234512<br><span> Email : info@gemplast.my</span></p>
